# customprocessordemo

./: package-lock.json  package.json  react-native-audio-api-0.6.4.tgz
android/app/src/main/jni/: CMakeLists.txt
app/(tabs)/: AudioPlayer.ts  index.tsx
ios/shared/: MyProcessorNode.cpp  NativeAudioProcessingModule.cpp
shared/: MyProcessorNodeHostObject.h  NativeAudioProcessingModule.cpp  NativeAudioProcessingModule.h
